# offshell_angular_coefficients

./: .gitignore  .jupyter_ystore.db  README.md  pixi.toml  pyproject.toml
notebooks/: 01_lhe_angular_coefficients.ipynb
src/offshell_angles/: __init__.py  harmonics.py  kinematics.py  lhe.py  training.py
tests/: test_harmonics.py  test_kinematics.py  test_lhe.py  test_training.py
