[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "offshell-angles"
version = "0.1.0"
description = "Born-projected angular coefficients for off-shell H to ZZ to 2e2mu"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

